# torrents-csv

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build_sqlite.sh  search.sh  update_data.sh
.github/: dependabot.yml
.github/workflows/: docker.yml
data/scripts/: package.json  prune.sh  prune_currents.sh  scan_torrent_files.js  scan_torrents.sh
docker/dev/: Dockerfile  deploy.sh  docker-compose.yml  docker_update.sh
docker/prod/: Dockerfile  deploy.sh  docker-compose.yml
src/: main.rs
ui/: .eslintignore  package.json
ui/src/: env.ts  index.html  index.tsx  interfaces.ts  utils.ts
ui1/: README.md  fuse.js  tsconfig.json
ui1/src/: Main.css
ui1/src/components/: home.tsx  navbar.tsx  search.tsx
