[package]
name = "torrents-csv-service"
version = "0.1.0"
authors = ["Heretic <tylerjobsearch06@gmx.com>"]
edition = "2018"

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
env_logger = "0.10.0"

serde = "1.0.151"
serde_json = "1.0.91"
serde_derive = "1.0.149"

anyhow = "1.0.66"

r2d2 = "0.8.10"
r2d2_sqlite = "0.20.0"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
